added double age of

--- a/DoubleAge/DoubleAge/DoubleAge.csproj
+++ b/DoubleAge/DoubleAge/DoubleAge.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{788C8DD8-08CE-4C44-BB93-B9051438C8AB}</ProjectGuid>
+    <ProjectGuid>{5AFCA3FC-784F-459D-B595-330ED62E9098}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Calculate_Averages</RootNamespace>
-    <AssemblyName>Calculate Averages</AssemblyName>
+    <RootNamespace>DoubleAge</RootNamespace>
+    <AssemblyName>DoubleAge</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -42,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="DoubleAgeOf.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
